M4, M5 - built first .jar